feat: split into user+admin settings sections
